manifests/apps/firefly/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly
  namespace: firefly
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "firefly.ucdialplans.com"
  rules:
  - backendRefs:
    - name: firefly
      namespace: firefly
      kind: Service
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-importer
  namespace: firefly
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "firefly-importer.ucdialplans.com"
  rules:
  - backendRefs:
    - name: firefly-importer
      namespace: firefly
      kind: Service
      port: 80
